fixed projects display on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -356,8 +356,8 @@ footer {
     height: 100vh;
     min-height: 500px;
     max-height: 1080px;
-    background: url(../images/lead-bg.png);
-    background-size: 100.2%;
+    background: url(../images/lead-bg.png) no-repeat;
+    background-size: cover;
     background-position-x: -2px;
     padding: 15px;
     overflow: hidden;
@@ -1047,7 +1047,7 @@ and (max-device-width : 1024px)  {
 // Small Devices
 @media only screen 
 and (min-device-width : 320px) 
-and (max-device-width : 775px) {
+and (max-device-width : 767px) {
     body {
         font-size: 1.5em;
     }
